# prisma

./: Cargo.toml  index.html  styles.css
common/: Cargo.toml
common/src/: color.rs  effect.rs  lib.rs  project.rs  runner.rs
src/: app.rs  color.rs  effect.rs  invokations.rs  main.rs  project.json  project.rs  project_state.rs  runner.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  project.json
src/components/: app.rs  effect_editor.rs  layer_editor.rs  layer_list.rs  main_content.rs  mod.rs
src/components/main_content/: layer_editor.rs  mod.rs
src/components/sidebar/: layer_list.rs  mod.rs
src/editor/: editor_project.rs  mod.rs
src/state/: editor_project.rs  mod.rs  project.rs  ui.rs
