[package]
name = "prisma"
version = "0.0.0"
description = "An editor for creating zeevonk effects"
authors = ["Bauke Westendorp"]
license = "MIT"
repository = "https://github.com/BaukeWestendorp/prisma"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["shell-open"] }
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
rand = "0.8.5"
ws = "0.9.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
